--- a/test-game/style.css
+++ b/test-game/style.css
@@ -210,13 +210,7 @@ button {
     text-align: center;
 }
 
-#review-container h2 {
-    font-size: 1.4rem;
-    margin: 0 0 1.5rem;
-    color: #2c3e50;
-}
-
-#review-container h2 span {
+#review-title span {
     display: block;
     margin: 0.3rem 0;
     font-weight: normal;
