--- a/test-game/style.css
+++ b/test-game/style.css
@@ -85,15 +85,15 @@ button.finish-btn:hover {
 
 .btn-float {
     position: absolute;
-    top: 10px;
-    left: 10px;
-    width: 50px;
-    height: 50px;
+    top: 0;
+    left: 0.5rem;
+    width: 3rem;
+    height: 3rem;
     background-color: #007bff;
     color: white;
     border: none;
     border-radius: 50%;
-    font-size: 24px;
+    font-size: 1.5rem;
     cursor: pointer;
     z-index: 10;
 }
